..F....... [ZBX-5444] fixed host in maintenance not highlighted by adding icon to hosts in maintenance (in dashboard  "last 20 issue" widget and Monitoring -> triggers) ..F....... [ZBX-5444] fixed "last 20 issue" widget lines being 2px higher than other table lines in dashboard ..F....... [ZBX-5444] made host names with maintenance description correctly aligning in new lines in Monitoring->triggers when browser window width is changed
git-svn-id: svn://svn.zabbix.com/branches/dev@29622 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBX-5444/frontends/php/styles/default.css
+++ b/ZBX-5444/frontends/php/styles/default.css
@@ -836,3 +836,42 @@ table.suggest tr td { text-align: left; padding-left: 4px; line-height: 2.2em; f
 .colorpickerLabel { border: 1px solid black; display: inline; width: 10px; height: 10px; }
 fieldset { margin: 0 0 2px 0; padding: 2px; border: 1px solid gray; }
 fieldset legend { margin: 0.2em 0.5em; }
+
+/* maintenance icon */
+.maintenance-icon-inline, .maintenance-icon-abs {
+	background-image: url("../../images/general/wrench12transp.png");
+	background-repeat: no-repeat;
+	width: 12px;
+}
+
+.maintenance-icon-inline {
+	height: 14px;
+	vertical-align: middle;
+	display: inline-block;
+	margin-left: 5px;
+}
+
+.maintenance-icon-abs {
+	height: 12px;
+	position: absolute;
+	right: 0px;
+	top: 4px;
+}
+
+.maintenance-abs-cont {
+	position: relative;
+}
+
+.left-to-maintenance-icon-abs {
+	margin-right: 17px;
+}
+
+/* event action container */
+.event-action-cont {
+	text-align: center;
+}
+.event-action-cont div{
+	padding: 0 2px 0 2px;
+	display: table-cell;
+	width: 10px;
+}
